# Soccer_Team_Management

./: .env  README.md  docker-compose.yml
be/: pyproject.toml
fe/: package-lock.json  package.json
