[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "2023"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
peewee = "^3.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
